# leash

./: .gitignore  Cargo.toml  FLEET.md  LICENSE  README.md  docker-compose.operator.yml  package-lock.json  package.json
.agents/skills/verify/: SKILL.md
.github/: README.md
.github/workflows/: README.md  ci.yml  release.yml
docs/: ACTION_EVIDENCE.md  ADAPTERS.md  ADAPTER_SMOKE_TEMPLATE.md  BOT_INSTALL.md  CAMERA.md  DEFAULT_BRANCH_RECOVERY.md  LOCALIZATION.md  LOCALIZATION_PROVIDERS.md  MCP_HTTP.md  NAVIGATION.md  OPERATOR_SESSIONS.md  PHYSICAL_NAVIGATION.md  README.md  RELEASE.md  SCHEMAS.md  SENSORS.md  SOURCE_MAP.md
examples/: README.md
examples/bridge-compat/: README.md
examples/clients/: README.md
examples/clients/node/: http-client.mjs
examples/local-llm-mcp/: README.md
examples/network-transport/: README.md
examples/replay/: README.md  localization-contract-states.json  operator-session.json  sensor-contract-states.json  sim-basic.jsonl  sim-mapping.jsonl  sim-memory.jsonl  waveshare-ugv-sensors.jsonl
examples/waveshare-ugv/: README.md  sensor-fixture.json
examples/workers/: sim-motion-output.json  sim-perception-input.json
implementations/: README.md
implementations/waveshare-ugv/: README.md  adapter.rs  deployment-baseline.sh  sensor-soak.sh
implementations/waveshare-ugv/ros2/: .env.example  Dockerfile  clock-gate.sh  compose.yaml  package.xml  ros-soak.sh  slam-stack.sh  verify.sh
implementations/waveshare-ugv/ros2/config/: ekf.yaml  slam_toolbox.yaml
implementations/waveshare-ugv/ros2/launch/: bringup.launch.py
implementations/waveshare-ugv/ros2/leash_waveshare_slam/: __init__.py  bridge.py  contract.py  lineage.py
implementations/waveshare-ugv/ros2/resource/: leash_waveshare_slam
implementations/waveshare-ugv/ros2/test/: test_contract.py
operator/: Dockerfile  README.md  fleet.example.json  fleet.schema.json  server.js
operator/public/: app.js  index.html  session.js  styles.css  video-transport.js
operator/test/: video-transport.test.js
schemas/: README.md  leash-messages.schema.json
scripts/: README.md  install-bot.sh  smoke-adapter-contracts.sh  smoke-all.sh  smoke-daemon.sh  smoke-http.sh  smoke-mcp-bridge.sh  smoke-mcp-http.sh  smoke-mcp.py  smoke-mcp.sh  smoke-operator-session.sh  smoke-operator.sh  smoke-physical-gate.sh  smoke-replay-http.sh  smoke-replay-mcp.sh  smoke-stream-hub.sh  smoke-worker.sh
specs/: README.md
specs/leash/: AGENTS.md  README.md  SPEC.dog  constitution.dog  data-model.dog  leash.dag
src/: README.md  accelerator.rs  adapter.rs  agent.rs  agent_runtime.rs  calibration.rs  capability.rs  cognition.rs  config.rs  cuda_cognition.rs  cuda_voxel.rs  daemon.rs  http.rs  lib.rs  localization.rs  mcp.rs  mcp_bridge.rs  memory.rs  module.rs  navigation.rs  operator_session.rs  pawprint.rs  perception.rs  replay.rs  runtime.rs  stack.rs  stream_processing.rs  transport.rs  types.rs  v4l2_camera.rs  webrtc_camera.rs  worker.rs
(+21 files in other folders)
