<?xml version="1.0"?>
<package format="3">
  <name>leash_waveshare_slam</name>
  <version>0.1.0</version>
  <description>Read-only ROS 2 SLAM adapter for the Leash Waveshare UGV implementation.</description>
  <maintainer email="maintainers@specdog.dev">Leash maintainers</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
